# txt2epub

./: pyproject.toml
scripts/: setup.sh  sync-epub-generator.sh
